# databricks-rust-w-sql-archive

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/data/: api_client.rs  delta.rs  metastore.rs  permissions.rs
src/sql/: sql_client.rs
src/sql/migrations/: 00000_init.sql
src/tests/: api_test.rs
